[gd_scene load_steps=9 format=3 uid="uid://buxsg4vnq6cje"]

[ext_resource type="Script" path="res://Resources/Buildings/BigBoi/big_boi.gd" id="1_qmp0g"]
[ext_resource type="Texture2D" uid="uid://cxekakploqm27" path="res://Assets/Sprites/bigboi.png" id="2_0uf35"]
[ext_resource type="Script" path="res://Components/Inventory/inventory.gd" id="3_47ch1"]
[ext_resource type="PackedScene" uid="uid://ejmexu6i8aey" path="res://Components/IO/output_node.tscn" id="4_uaxms"]
[ext_resource type="PackedScene" uid="uid://rwvdhvwcwga4" path="res://Components/IO/input_node.tscn" id="5_my2yu"]
[ext_resource type="Script" path="res://Components/KeepUpright/KeepUpright.gd" id="6_tjb2a"]
[ext_resource type="PackedScene" uid="uid://daoao5f5x4r5d" path="res://Components/DestroyButton/destroy_button.tscn" id="7_228m2"]
[ext_resource type="Script" path="res://Components/DestroyButton/DestroyLabel.gd" id="7_vp0v2"]

[node name="BigBoi" type="StaticBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_qmp0g")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 64, 0, 64, 48, 96, 48, 96, 0, 128, 0, 128, 64, 64, 64, 64, 80, 97, 80, 96, 96, 128, 96, 128, 128, 112, 128, 112, 112, 96, 112, 96, 128, 0, 128, 0, 80, 32, 80, 32, 32, 0, 32)

[node name="OutputNode" parent="." instance=ExtResource("4_uaxms")]
position = Vector2(120, 136)

[node name="InputNode" parent="." node_paths=PackedStringArray("inventory") instance=ExtResource("5_my2yu")]
position = Vector2(8, 8)
inventory = NodePath("../Inventory")

[node name="DestroyButton" parent="." node_paths=PackedStringArray("actor_to_destroy") instance=ExtResource("7_228m2")]
destroy_time = 6.0
actor_to_destroy = NodePath("..")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="DestroyButton"]
polygon = PackedVector2Array(0, 0, 64, 0, 64, 48, 96, 48, 96, 0, 128, 0, 128, 64, 64, 64, 64, 80, 97, 80, 96, 96, 128, 96, 128, 128, 112, 128, 112, 112, 96, 112, 96, 128, 0, 128, 0, 80, 32, 80, 32, 32, 0, 32)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(64, 64)
texture = ExtResource("2_0uf35")

[node name="KeepUpright" type="Node2D" parent="."]
position = Vector2(64, 64)
script = ExtResource("6_tjb2a")

[node name="InventoryLabel" type="Label" parent="KeepUpright"]
offset_left = -64.0
offset_top = -64.0
offset_right = -32.0
offset_bottom = -32.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressLabel" type="Label" parent="KeepUpright"]
offset_left = -64.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 64.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="DestroyLabel" type="Label" parent="KeepUpright" node_paths=PackedStringArray("destroy_button")]
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_vp0v2")
destroy_button = NodePath("../../DestroyButton")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Inventory" type="Node" parent="."]
script = ExtResource("3_47ch1")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="slot_updated" from="Inventory" to="." method="_on_inventory_slot_updated"]
